--- a/views/successOrders.ejs
+++ b/views/successOrders.ejs
@@ -17,7 +17,6 @@
 <body>
 <header>
     <div id="menu-bar" class="fas fa-bars"></div>
-
     <a style="text-decoration: none;" href="/charity" class="logo"><span>لـ</span>قمة عيش</a>
     <nav class="navbar">
         <a style="text-decoration: none;" href="#packages">المطاعم</a>
@@ -84,6 +83,6 @@
 
     
     <!-- packages section ends -->
-    
+    <script src = "/menu.js"></script>
     </body>
     </html>
