--- a/views/viewResPage.ejs
+++ b/views/viewResPage.ejs
@@ -16,6 +16,7 @@
 </head>
 <body>
     <header>
+        <div id="menu-bar" class="fas fa-bars"> </div>
         <a style="text-decoration: none;" href="/charity" class="logo"><span>لـ</span>قمة عيش</a>
         <div class="dropdown">
             <div class="icons">
@@ -23,7 +24,6 @@
                 <a style="text-decoration: none;" href="/logout" class="fas fa-sign-out-alt"></a>
             </div> 
         </div>
-
     </header>
 
     <section class="services" id="services">
@@ -148,4 +148,5 @@
 
 </section>
 <script type="text/javascript" src="https://cdn.jsdelivr.net/npm/toastify-js"></script>
+<script src = "/menu.js"></script>
 </body>
