--- a/views/charityReservations.ejs
+++ b/views/charityReservations.ejs
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="ar" dir="rtl">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -21,6 +21,7 @@
             <a style="text-decoration: none;" href="/charity">المطاعم</a>
             <a style="text-decoration: none;" href="/changePassword">تغيير كلمة المرور</a>
             <a style="text-decoration: none;" href="/DeleteAcount">الغاء العضوية</a>
+            
         </nav>
         <div class="dropdown">
             <div class="icons">
@@ -48,7 +49,7 @@
                                 <label> تاريخ الحجز: <%= item.date %></label><br>
                                 <label>الكمية: <%= item.quantity %></label><br>
 
-                               <!-- <button href="#services" class="btn" type="submit">حذف الطلب</button><br>-->
+                               <button class="btn" type="submit">الغاء الحجز</button><br>
                             </form> 
                     </div>
                     <% 
