--- a/views/endSession.ejs
+++ b/views/endSession.ejs
@@ -33,7 +33,7 @@
     </div>
     </header>
     <div class="login-form-container">    
-        <form  action="/endSession" method="POST">
+        <form  action="/Login" method="GET">
             <h3>انتهاء مدة الطلب</h3><br>
             <h1 style="text-align:center ;"> انتهت مدة الطلب، الرجاء تسجيل الدخول مجددا للمتابعة</h1><br>
             <input type="submit" value="تسجيل الدخول" class="btn">
