--- a/views/EditProfilePage.ejs
+++ b/views/EditProfilePage.ejs
@@ -18,11 +18,10 @@
             <div style="display: flex;" class="container rounded" >
                 <div class=""style="width:23vw">
                     <div class="mt-5">
-                        <div class="col-md-12"><label style="font-family: 'Vazirmatn', sans-serif;"class="labels">الاسم  :  </label><input style="width:12vw" class="p-4" name = "name" type="text"placeholder="  أدخل اسمك" value=""><br><br></div>
-                        <div class="col-md-12"><label class="labels">الايميل  :  </label><input style="width:12vw" class="p-3" name = "email" type="text"  placeholder="أدخل ايميلك" value=""><br><br></div>
+                        <div class="col-md-12"><label style="font-family: 'Vazirmatn', sans-serif;"class="labels">الاسم  :  </label><input style="width:12vw" class="p-4" name = "name" type="text"placeholder="أدخل اسمك" value=""><br><br></div>
                         <div class="col-md-12"><label class="labels">رقم الهاتف  :  </label><input style="width:12vw" class="p-3" name = "phone" type="text"  placeholder="أدخل رقم هاتفك " value=""><br><br></div>
                         <div class="col-md-12"><label class="labels">الموقع الالكتروني  :  </label><input class="p-3" style="width:12vw" name = "website" type="text" placeholder="أدخل الموقع الالكتروني" value=""><br><br></div>
-                        <div class="col-md-12"><label class="labels">الموقع  :  </label><input style="width:12vw" class="p-3" name = "location" type="text" placeholder="أدخل موقعك" value=""></div>
+                        <div class="col-md-12"><label class="labels">الموقع  :  </label><input style="width:12vw" class="p-3" name = "location" type="text" placeholder="أدخل موقعك" value=""></div><br><br><br><br>
                         <div class="mt-2 "><button style="margin-right:0" class="btn btn-primary profile-button" type="submit">حفظ التعديلات</button></div>
                     </div>
                 </div>   
