include duplicate codes
Co-Authored-By: abrarhannoon <92648528+abrarhannoon@users.noreply.github.com>

--- a/views/DeleteAcount.ejs
+++ b/views/DeleteAcount.ejs
@@ -3,14 +3,7 @@
     <%- include("./partials/head") %>
 
 <body>
-    <header>
-        <a style="text-decoration: none;" href="/" class="logo"><span>لـ</span>قمة عيش</a>
-        <div class="dropdown">
-            <div class="icons">
-                <i class="fas fa-user" id="login-btn"></i>
-            </div> 
-        </div>
-    </header>
+    <%- include("./partials/header3") %>
    
     <div class="login-form-container">
         <form  action="/deleteacount/delete?_method=DELETE" method="POST">
