--- a/views/changePassword.ejs
+++ b/views/changePassword.ejs
@@ -1,17 +1,8 @@
 <!DOCTYPE html>
 <html lang="ar">
     <%- include("./partials/head") %>
-
 <body>
-    <header>
-        <a style="text-decoration: none;" href="/restaurant" class="logo"><span>لـ</span>قمة عيش</a>
-        <div class="dropdown">
-        <div class="icons">
-            <i class="fas fa-search" id="search-btn"></i>
-            <i class="fas fa-user" id="login-btn"></i>
-        </div> 
-        </div>
-    </header>
+    <%- include("./partials/mainheader") %>
     <div class="login-form-container">
 
         <form  action="/change/changePassword?_method=PUT" method="POST">
@@ -39,10 +30,7 @@
                   </div>
                 </div>
             <%} %>
-        </form>
- 
-
-          
+        </form>     
     </div>
 
 </body>
