--- a/views/endSession.ejs
+++ b/views/endSession.ejs
@@ -3,16 +3,7 @@
     <%- include("./partials/head") %>
 
 <body>
-    <header>
-        <div id="menu-bar" class="fas fa-bars"></div>
-        <a style="text-decoration: none;" href="/restaurant" class="logo"><span>لـ</span>قمة عيش</a>
-        <div class="dropdown">
-            <div class="icons">
-                <i class="fas fa-search" id="search-btn"></i>
-                <i class="fas fa-user" id="login-btn"></i>
-            </div> 
-        </div>
-    </header>
+    <%- include("./partials/header3") %>
     <div class="login-form-container">    
         <form  action="/Login" method="GET">
             <h3>انتهاء مدة الطلب</h3><br>
