--- a/views/home.ejs
+++ b/views/home.ejs
@@ -2,9 +2,7 @@
 <html lang="ar" dir="rtl">
     <%- include("./partials/head") %>
 <body>
-    <header>
-        <a style="text-decoration: none;" href="/" class="logo"><span>لـ</span>قمة عيش</a>
-    </header>
+    <%- include("./partials/mainheader") %>
 
     <section class="home" id="home"style="background-color:#fff;">
         <div class="container"style="background-color:#fff; width:100vw;">
