--- a/views/resHomePage.ejs
+++ b/views/resHomePage.ejs
@@ -2,23 +2,7 @@
 <html lang="ar" dir="rtl">
     <%- include("./partials/head") %>
 <body><br><br><br><br>
-    <header>
-        <div id="menu-bar" class="fas fa-bars"> </div>
-        <a style="text-decoration: none;" href="/restaurant" class="logo"><span>لـ</span>قمة عيش</a>
-        <nav class="navbar">
-            <a style="text-decoration: none;" href="#services">قائمة الطعام</a>
-            <a style="text-decoration: none;" href="#book">الحجوزات</a>
-            <a style="text-decoration: none;" href="/changePassword">تغيير كلمة المرور</a>
-            <a style="text-decoration: none;" href="/DeleteAcount">الغاء العضوية</a>
-        </nav>
-        <div class="dropdown">
-            <div class="icons">
-                <a href = "/user" class="fas fa-user" id="login-btn"></a>
-                <a style="text-decoration: none;" href="/logout" class="fas fa-sign-out-alt"></a>
-            </div> 
-        </div>
-
-    </header>
+    <%- include("./partials/header1") %>
 
 <!-- services section starts  -->
 
