--- a/views/setNewPass.ejs
+++ b/views/setNewPass.ejs
@@ -2,9 +2,7 @@
 <html lang="ar">
   <%- include("./partials/head") %>
 <body>
-    <header>   
-            <a style="text-decoration: none;" href="/restaurant" class="logo"><span>لـ</span>قمة عيش</a>
-    </header>
+  <%- include("./partials/mainheader") %>
 
     <div class="login-form-container">
         <form action="/newPassword?_method=PUT" method="POST">
