--- a/views/viewResPage.ejs
+++ b/views/viewResPage.ejs
@@ -15,16 +15,7 @@
     <script src="/resturantPage.js" defer></script>
 </head>
 <body>
-    <header>
-        <div id="menu-bar" class="fas fa-bars"> </div>
-        <a style="text-decoration: none;" href="/charity" class="logo"><span>لـ</span>قمة عيش</a>
-        <div class="dropdown">
-            <div class="icons">
-                <a href = "/user" class="fas fa-user" id="login-btn"></a>
-                <a style="text-decoration: none;" href="/logout" class="fas fa-sign-out-alt"></a>
-            </div> 
-        </div>
-    </header>
+    <%- include("./partials/header3") %>
 
     <section class="services" id="services">
 
