--- a/views/profilePage.ejs
+++ b/views/profilePage.ejs
@@ -2,18 +2,7 @@
 <html lang="ar"dir="rtl">
     <%- include("./partials/head") %>
 <body style="background-color: #ffc153;">
-    <header>
-        <div id="menu-bar" class="fas fa-bars"> </div>
-        <a style="text-decoration: none;" href="/restaurant" class="logo"><span>لـ</span>قمة عيش</a>
-        <div class="dropdown">
-            <div class="icons">
-                <a href = "/user" class="fas fa-user" id="login-btn"></a>
-                <a style="text-decoration: none;" href="/logout" class="fas fa-sign-out-alt"></a>
-            </div> 
-        </div>
-    </header>
-
-
+    <%- include("./partials/header3") %>
     <div style="height: 70vh; margin-top: 20vh;display: flex;" class="container rounded bg-white col-md-6">
         <div>
             <div class="">
