--- a/views/DeleteAcount.ejs
+++ b/views/DeleteAcount.ejs
@@ -3,9 +3,9 @@
     <%- include("./partials/head") %>
 
 <body>
-    <%- include("./partials/header3") %>
+    <%- include("./partials/header2") %>
    
-    <div class="login-form-container">
+    <div class="login-form-container top">
         <form  action="/deleteacount/delete?_method=DELETE" method="POST">
             <p style="color: black; font-family:'Times New Roman', Times, serif;font-size:xx-large"> حذف حسابك</p><br>
             <h1  style="font-family: Simplified Arabic ,'Vazirmatn', sans-serif; text-align:center; size:14px";class="labels">هل انت متأكد من حذف الحساب؟</h1><br>
