--- a/views/changePassword.ejs
+++ b/views/changePassword.ejs
@@ -2,8 +2,8 @@
 <html lang="ar">
     <%- include("./partials/head") %>
 <body>
-    <%- include("./partials/mainheader") %>
-    <div class="login-form-container">
+    <%- include("./partials/header2") %>
+    <div class="login-form-container top">
 
         <form  action="/change/changePassword?_method=PUT" method="POST">
             <h3> تغيير كلمة المرور</h3>
