--- a/views/endSession.ejs
+++ b/views/endSession.ejs
@@ -3,8 +3,8 @@
     <%- include("./partials/head") %>
 
 <body>
-    <%- include("./partials/header3") %>
-    <div class="login-form-container">    
+    <%- include("./partials/header2") %>
+    <div class="login-form-container top">    
         <form  action="/Login" method="GET">
             <h3>انتهاء مدة الطلب</h3><br>
             <h1 style="text-align:center ;"> انتهت مدة الطلب، الرجاء تسجيل الدخول مجددا للمتابعة</h1><br>
