--- a/views/home.ejs
+++ b/views/home.ejs
@@ -4,7 +4,7 @@
 <body>
     <%- include("./partials/mainheader") %>
 
-    <section class="home" id="home"style="background-color:#fff;">
+    <section class="home top" id="home"style="background-color:#fff;">
         <div class="container"style="background-color:#fff; width:100vw;">
             <div class="div1">
                 <h5>مرحبا بكم في موقعنا</h5>
