--- a/views/partials/charHomeContent.ejs
+++ b/views/partials/charHomeContent.ejs
@@ -1,4 +1,4 @@
-<section class="packages" id="packages">
+<section class="packages top" id="packages">
 
     <h1 class="heading">
         <span>ا</span>
