--- a/views/setNewPass.ejs
+++ b/views/setNewPass.ejs
@@ -2,9 +2,9 @@
 <html lang="ar">
   <%- include("./partials/head") %>
 <body>
-  <%- include("./partials/mainheader") %>
+  <%- include("./partials/header2") %>
 
-    <div class="login-form-container">
+    <div class="login-form-container top">
         <form action="/newPassword?_method=PUT" method="POST">
             <h3> تغيير كلمة المرور</h3>
             <input name="password" type="password" class="box" placeholder="ادخل كلمة المرور الجديدة">
