--- a/public/style.css
+++ b/public/style.css
@@ -95,10 +95,10 @@ section{
   background-color: #ffc153;
 }
 .heading{
-  margin-top: 7vh;
   text-align: center;
   padding:2.5rem 0
 }
+
 .heading span{
   font-size: 3.5rem;
   background:rgba(255, 165, 0,.2);
@@ -120,6 +120,10 @@ section{
   border:.2rem solid var(--orange);
   cursor: pointer;
   font-size: 1.7rem;
+}
+
+.top{
+  margin-top: 9vh;
 }
 
 .btn:hover{
