--- a/views/EditProfilePage.ejs
+++ b/views/EditProfilePage.ejs
@@ -2,9 +2,9 @@
 <html lang="ar"dir="rtl">
     <%- include("./partials/head") %>
 <body style="  background-color: #ffc153;">
-    <%- include("./partials/header3") %>
+    <%- include("./partials/header2") %>
 
-    <div style="height: 70vh; margin-top: 20vh;" class=" bg-white col-md-6">
+    <div style="height: 70vh; margin-top: 20vh;" class=" bg-white col-md-6 top">
         <form action = "/profile/edit/?_method=PUT" method = "POST" enctype="multipart/form-data">
             <div style="display: flex;" class="container rounded" >
                 <div class=""style="width:23vw">
