--- a/views/partials/header2.ejs
+++ b/views/partials/header2.ejs
@@ -1,15 +1,10 @@
 <header>
     <div id="menu-bar" class="fas fa-bars"> </div>
-    <a style="text-decoration: none;" href="/charity" class="logo"><span>لـ</span>قمة عيش</a>
-    <nav class="navbar">
-        <a style="text-decoration: none;" href="/charity">المطاعم</a>
-        <a style="text-decoration: none;" href="/changePassword">تغيير كلمة المرور</a>
-        <a style="text-decoration: none;" href="/DeleteAcount">الغاء العضوية</a>
-    </nav>
+    <a style="text-decoration: none;" href="/restaurant" class="logo"><span>لـ</span>قمة عيش</a>
     <div class="dropdown">
         <div class="icons">
-            <a style="text-decoration: none;" href="/logout" class="fas fa-sign-out-alt"></a>
             <a href = "/user" class="fas fa-user" id="login-btn"></a>
+            <a style="text-decoration: none;" href="/logout" class="fas fa-sign-out-alt"></a>
         </div> 
     </div>
 </header>
