--- a/views/reservations.ejs
+++ b/views/reservations.ejs
@@ -5,7 +5,7 @@
     <%- include("./partials/header1") %>
 
     <% if(charityRes){ %>
-        <h1 class="heading top"> 
+        <h1 class="heading top" style="margin-top: 75px;"> 
             <span>حجوزات الجمعية</span>
         </h1>
         <section class="services" >
@@ -33,7 +33,7 @@
     
     <% if(resturantRes){ %>
         <section class="services top">
-            <h1 class="heading">
+            <h1 class="heading" style="margin-top: 75px;">
                 <span>حجوزات المطعم</span>
             </h1>
             <section id="book">
