--- a/views/changePassword.ejs
+++ b/views/changePassword.ejs
@@ -7,9 +7,9 @@
 
         <form  action="/change/changePassword?_method=PUT" method="POST">
             <h3> تغيير كلمة المرور</h3>
-            <input name="curentPassword" type="password" class="box" placeholder=" ادخل كلمة المرور الحالية">
-            <input name="newPassword" type="password" class="box" placeholder="ادخل كلمة المرور الجديدة">
-            <input name="confirmPassword" type="password" class="box" placeholder="تأكيد كلمة المرور">
+            <input name="curentPassword" type="password" class="box" placeholder=" ادخل كلمة المرور الحالية" required>
+            <input name="newPassword" type="password" class="box" placeholder="ادخل كلمة المرور الجديدة" required>
+            <input name="confirmPassword" type="password" class="box" placeholder="تأكيد كلمة المرور" required>
             <input type="submit" value="تأكيد" class="btn"><br>
             <svg xmlns="http://www.w3.org/2000/svg" style=" position:fixed">
                 <symbol id="check-circle-fill" fill="currentColor" viewBox="0 0 16 16">
