--- a/views/EditProfilePage.ejs
+++ b/views/EditProfilePage.ejs
@@ -4,9 +4,8 @@
 <body style="  background-color: #ffc153;">
     <%- include("./partials/header2") %>
 
-    <div style="height: 70vh; margin-top: 20vh;" class=" bg-white col-md-6 top">
+    <div style="height: 70vh; margin-top: 20vh;" class="bg-white col-md-6 top container">
         <form action = "/profile/edit/?_method=PUT" method = "POST" enctype="multipart/form-data">
-            <div style="display: flex;" class="container rounded" >
                 <div class=""style="width:23vw">
                     <div class="mt-5">
                         <div class="col-md-12"><label style="font-family: 'Vazirmatn', sans-serif;"class="labels">الاسم  :  </label><input style="width:12vw" class="p-4" name = "name" type="text"placeholder="أدخل اسمك" value=""><br><br></div>
@@ -26,7 +25,7 @@
                     </div>
             
                 </div>
-            </div><br>
+            <br>
         </form>
         <svg xmlns="http://www.w3.org/2000/svg" style="display: none;">
             <symbol id="check-circle-fill" fill="currentColor" viewBox="0 0 16 16">
