--- a/views/profilePage.ejs
+++ b/views/profilePage.ejs
@@ -18,7 +18,7 @@
                 </form>
             <%}%>
         </div>        
-        <div style="width:15vw; border:double 7px ">
+        <div style="width:15vw; border:double 7px " class='divv'>
             <img style="width:100%" src= "/uploads/<%= data[0].img %>" alt=""/>
         </div>
     </div>
